packages/sdk/tests/fixtures/negative/ui-side-effect.fixture.ts
import /* comment-separated-side-effect */ "@deepwork/ui";
export { StatusPanel } from /* comment-separated-re-export */ "@deepwork/ui";
